[gd_scene load_steps=9 format=3 uid="uid://bs2d6rw3gxovy"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_aex6k"]
[ext_resource type="Texture2D" uid="uid://baev4dfk43gf7" path="res://assets/graphics/player/player.png" id="1_uf5kt"]
[ext_resource type="Texture2D" uid="uid://cue216psjl47h" path="res://assets/graphics/decals/white.png" id="3_0gfjd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_woawn"]
radius = 63.0079

[sub_resource type="Gradient" id="Gradient_e8rkp"]
colors = PackedColorArray(0.380392, 0.992157, 0.952941, 0.831373, 0.380392, 0.992157, 0.952941, 0.45098)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r4n0b"]
gradient = SubResource("Gradient_e8rkp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_83o8a"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.8
color = Color(0.380392, 0.992157, 0.952941, 0.831373)
color_ramp = SubResource("GradientTexture1D_r4n0b")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qlelv"]
polygon = PackedVector2Array(28, -60, 39, -44, 44, -40, 45, -33, 51, -28, 61, -25, 72, -17, 77, -11, 83, -11, 92, -9, 97, -6, 103, -3, 112, -2, 115, 2, 121, 2, 126, 4, 122, 9, 127, 9, 132, 7, 135, 15, 135, 26, 131, 34, 125, 34, 120, 32, 121, 36, 114, 38, 109, 35, 105, 43, 99, 45, 97, 48, 96, 54, 86, 55, 76, 57, 69, 55, 63, 54, 60, 48, 60, 44, 55, 42, 49, 43, 46, 42, 41, 41, 31, 46, 25, 50, 13, 55, 4, 59, -20, 62, -29, 59, -36, 53, -36, 46, -38, 41, -47, 35, -47, 29, -51, 24, -52, 16, -55, 9, -58, 4, -58, 1, -58, -8, -58, -15, -58, -24, -55, -30, -48, -36, -43, -43, -33, -47, -29, -47, -25, -47, -21, -54, -17, -56, -9, -57, -6, -57, 5, -60, 15, -60, 21, -59)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_aex6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_woawn")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(38, 1)
rotation = 1.5708
texture = ExtResource("1_uf5kt")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(130, 12)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(134, 20)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(130, 30)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(139, 19)
emitting = false
process_material = SubResource("ParticleProcessMaterial_83o8a")
texture = ExtResource("3_0gfjd")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_qlelv")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
